@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/livecdfs-update.sh,v 1.11 2005/04/21 14:23:12 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/livecdfs-update.sh,v 1.12 2005/04/29 14:40:25 rocket Exp $
 
 . /tmp/chroot-functions.sh
 update_env_settings
@@ -55,7 +55,7 @@ case ${clst_livecd_type} in
 	*)
 		echo "catalyst-livecd" > /etc/hostname
 		echo "gentoo" > /etc/dnsdomainname
-		echo "127.0.0.1	catalyst-livecd.gentoo livecd localhost" > /etc/hosts
+		echo "127.0.0.1	catalyst-livecd catalyst-livecd.gentoo livecd localhost" > /etc/hosts
 		;;
 esac
 
