@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.250 2005/04/29 13:51:39 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.251 2005/04/29 14:40:25 rocket Exp $
+
+  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
+  targets/support/bootloader-setup.sh, targets/support/livecdfs-update.sh:
+  Fix /etc/hosts aliases for catalyst-livecd and work on help menu for grub
+  bootloading
 
   29 Apr 2005; Eric Edgar <rocket@gentoo.org>
   modules/livecd_stage2_target.py:
